--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --watch-all",
     "start": "node server/server.js",
     "dev": "nodemon server/server.js"
   },
@@ -26,5 +26,7 @@
     "nodemon": "^2.0.22",
     "sequelize": "^6.31.1",
     "sqlite3": "^5.1.6"
-  }
+  },
+  "devDependencies": {},
+  "keywords": []
 }
