--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest --watch-all",
+    "test": "jest",
     "start": "node server/server.js",
     "dev": "nodemon server/server.js",
     "client-dev": "parcel public/index.html --open"
