--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "taskmaster-notes-app",
-  "type": "module",
+  "type": "Commonjs",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
