fixed commonjs issue

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "taskmaster-notes-app",
-  "type": "module",
+  "type": "commonjs",
   "version": "1.0.0",
   "description": "#### What is Taskmaster Notes?  * Taskmaster Notes is a place to keep track of your notes and keep up-to-date on your tasks for work, school, or whatever your task is for! * Check out the guidelines below to get started using Taskmaster Notes",
   "main": "index.js",
