--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@babel/preset-env": "^7.15.0",
     "@babel/preset-react": "^7.14.5",
+    "axios": "^1.4.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
@@ -38,6 +39,5 @@
     "sqlite3": "^5.1.6",
     "supertest": "^6.3.3"
   },
-  "keywords": [],
-  "devDependencies": {}
+  "keywords": []
 }
