--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,7 +12,7 @@ jobs:
             - uses: actions/setup-node@v3
               with:
                 node-version: 16.x
-            - run: npm start
+            - run: npm ci
             - run: npm test
     build:
         name: Build and Deploy
